# m3u8_spider

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  aaa.txt  auto_download_daemon.py  auto_downloader.py  batch_merge.py  check_syntax.py  config.py  constants.py  db_manager.py  env.example  feature.md  logger_config.py  main.py  merge_to_mp4.py  pyproject.toml  sqlite_to_postgres.py  sync_mp4_to_remote.sh  validate_downloads.py  verify_integration.py
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
cli/: __init__.py  batch_merge.py  daemon.py  m3u8_refresh_daemon.py  main.py  sync_mp4.sh
graphify-out/: .graphify_cached.json  .graphify_semantic_new.json  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
m3u8_spider/: __init__.py  config.py  logger.py
m3u8_spider/automation/: __init__.py  auto_downloader.py  m3u8_refresher.py
m3u8_spider/core/: __init__.py  downloader.py  m3u8_fetcher.py  recovery.py  validator.py
m3u8_spider/database/: __init__.py  manager.py
m3u8_spider/utils/: __init__.py  helpers.py  merger.py  migration.py
scrapy_project/: scrapy.cfg
scrapy_project/m3u8_spider/: extensions.py  items.py  logformatter.py  middlewares.py  pipelines.py  settings.py
tests/: conftest.py  test_helpers.py  test_merger.py
tests/core/: test_downloader.py  test_m3u8_fetcher.py  test_recovery.py  test_validator.py
tests/scrapy/: test_encryption_detector.py  (+2 more)
utils/: auto_downloader.py  db_manager.py  logger.py  recovery_downloader.py  scrapy_manager.py
(+1 files in other folders)
