[project]
name = "m3u8-spider"
version = "0.1.0"
description = "M3U8文件下载工具，使用Scrapy框架下载HLS视频片段"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "scrapy>=2.11.0",
    "m3u8>=3.5.0",
    "requests>=2.31.0",
    "ruff>=0.15.0",
    "pymysql>=1.1.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9.0"]

[project.scripts]
m3u8-download = "cli.main:main"
m3u8-daemon = "cli.daemon:main"
m3u8-batch-merge = "cli.batch_merge:main"

[tool.pyright]
extraPaths = ["scrapy_project"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]